--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="btn_logout_from_google">Logout from Google</string>
     <string name="btn_revoke_access">Revoke Access</string>
     <string name="loading">Please Wait</string>
+    <string name="prompt_merchant_id">Merchant ID</string>
+    <string name="merchant_signup">Want to be our Merchant?</string>
 </resources>
