--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,9 +45,13 @@
     <string name="filldata">Fill your data below, we will contact  your WA number soon to verify</string>
     <string name="Place">Place</string>
     <string name="idcard">Identity Card Number</string>
-    <string name="age">Age</string>
-    <string name="WANumber">WA Number</string>
     <string name="Click">Click sign up below means Agree with our rule</string>
     <string name="signUp">Sign Up</string>
-    <string name="ahmad">Ahmad</string>
+    <string name="your_name">Insert your name</string>
+    <string name="your_place">Insert your place</string>
+    <string name="your_idnumber">Insert your ID</string>
+    <string name="age">Age</string>
+    <string name="WANumber">WA Number</string>
+    <string name="your_age">Insert your age</string>
+    <string name="your_wa">Insert your WA Number</string>
 </resources>
