--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="send_password_reset_email">Send Password reset email</string>
     <string name="remove_user">Remove User</string>
     <string name="btn_sign_out">Sign Out</string>
+    <string name="not_available">Not Available</string>
 </resources>
