--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,14 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_koin_page">Koin Page</string>
+    <string name="title_activity_bulletin">Bulletin</string>
+    <string name="title_activity_account_profile">Account Profile</string>
+    <string name="title_activity_merchant_signup">Merchant Sign Up</string>
+    <string name="title_activity_koin_history">Koin History</string>
+    <string name="title_activity_created_tree">Created Tree</string>
+    <string name="title_activity_create_tree">Create Tree</string>
+    <string name="title_activity_send_koin">Send Koin</string>
+    <string name="title_activity_receive_koin">Receive Koin</string>
+    <string name="title_activity_settings">Settings</string>
 </resources>
